# procedural-textures

./: .gitignore  Cargo.toml  README.md
src/: main.rs  mod.rs  shader.rs
src/texture/: dirt.rs  mod.rs  perlin.rs
